# try-interpipe

./: .gitmodules  CMakeLists.txt  GstPtr.h  main.cpp
